# electron_rust

./: .gitigore  LICENSE  README.md  package-lock.json  package.json
rust_api/: Cargo.toml
rust_api/src/: lib.rs
src/: index.html  main.html  main.js
src/css/: all.css  sunny.css
src/js/: clear_mem.js  copy.js  file_read.js  header.js  menu.js  net.js  notification.js  open_file.js  open_win.js  right_click.js  rust_lib.js  son_win.js
src/lib/: ffi.js
src/lib/api/: librust_api.dylib
src/page/: about.html  clearHZ.html  popup.html  post.html  yellow.html
src/page/data/: clearURL.html  post.html  postjson.html
