[package]
name = "rust_api"
version = "0.1.0"
authors = ["iwalkerr <walkerr@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 动态库定义
[lib]
name = "rust_api"
crate-type = ["dylib"]

[dependencies]
num_cpus = "1.4.0"
#serde_derive = "1.0"
#serde = "1.0"
rustc-serialize = "0.3.18"